fixed background showing up behind dropdown and popover object

--- a/src/main/resources/edu/wpi/cs3733/C23/teamD/views/styleguide.css
+++ b/src/main/resources/edu/wpi/cs3733/C23/teamD/views/styleguide.css
@@ -4,8 +4,6 @@
     -fx-base: #123486;
     -fx-background: #f5f5f5;
     -fx-background-size: cover;
-    -fx-background-color: linear-gradient(from 0% 50% to 100% 50%, rgba(244,244,244,1), rgba(244,244,244,0));
-    -fx-background-image: url('images/Shapiro-Center-at-dusk-.jpeg');
     -fx-background-repeat: no-repeat;
 }
 
@@ -28,6 +26,11 @@
     -fx-pref-width: 40pt;
     -fx-font-size: 18pt;
     -fx-font-weight: bolder;
+}
+
+.basePane {
+    -fx-background-color: linear-gradient(from 0% 50% to 100% 50%, rgba(244,244,244,1), rgba(244,244,244,0));
+    -fx-background-image: url('images/Shapiro-Center-at-dusk-.jpeg');
 }
 
 .menu-button {
